Set up application routes and skeleton front-end

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,9 @@
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script th:text="'var dataset = ' + ${dataset} + ';'"/>
 </head>
 <body>
-
-
+<p> This is the homepage !!</p>
 <p> Type in a hashtag to see the current sentiment on twitter regarding it</p>
 <form action="/" method="POST">
     <input type="text" name="hashtag" />
