--- a/src/main/resources/templates/minerDisplay.html
+++ b/src/main/resources/templates/minerDisplay.html
@@ -1,17 +1,55 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Sentiment Miner</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script th:text="'var dataset = ' + ${dataset} + ';'"/>
-</head>
-<body>
+    <head>
+
+        <!--Bootstrap dependencies that are required to come first-->
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Chart.js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
+
+        <!-- other meta tags -->
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+        <title>Sentiment Miner</title>
+
+        <!-- data provided by backend -->
+        <script th:text="'var dataset = [' + ${dataset} + '];'"/>
+
+        <!-- custom static resources -->
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="displayChart.js"></script>
+
+    </head>
+    <body>
+        <h1 class="center">Sentiment Analysis Results</h1>
+
+        <div id="chart-container">
+            <canvas id="sentimentDisplay" width="100" height="100"></canvas>
+        </div>
 
 
-<p> Type in a hashtag to see the current sentiment on twitter regarding it</p>
-<form action="/" method="POST">
-    <input type="text" name="hashtag" />
-    <input type="submit" name="submit" />
-</form>
-</body>
+        <div id="form-container">
+            <h3 class="text-danger center" th:text="${warning}"/>
+            <p class="center"> Type in a hashtag to see the current sentiment on twitter regarding it</p>
+            <form class="center" action="/displaySentiment" method="POST">
+                <div class="form-group">
+                    <label class="" for="hashtag">Hashtag: #</label>
+                    <input class="form-control " placeholder="hashtag" type="text" name="hashtag" id="hashtag"/>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </body>
 </html>
