Display hashtag being analyzed in minerDisplay header

--- a/src/main/resources/templates/minerDisplay.html
+++ b/src/main/resources/templates/minerDisplay.html
@@ -27,7 +27,7 @@
 
     </head>
     <body>
-        <h1 class="center">Sentiment Analysis Results</h1>
+        <h1 class="center" th:text="'#' + ${hashtag} + ' Sentiment Analysis Results'"/>
 
         <div id="chart-container">
             <canvas id="sentimentDisplay" width="100" height="100"></canvas>
